--- a/Style/style.css
+++ b/Style/style.css
@@ -199,6 +199,99 @@ a.second-link:hover {
 	}
 }
 
+/* ----------- iPad 1, 2, Mini and Air ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+  	div.collapse > ul > li:first-child {
+		margin-left:auto;
+		font-size: 160%;
+	}
+	.nav-link {
+		padding: 0px;
+	}
+	.parallax {
+		background-attachment: fixed;
+	}
+	.gmap_canvas {
+		width:450px;
+	}
+
+}
+
+/* ----------- iPad 3, 4 and Pro 9.7" ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 2) {
+  	div.collapse > ul > li:first-child {
+		margin-left:auto;
+		font-size: 160%;
+	}
+	.nav-link {
+		padding: 0px;
+	}
+	.parallax {
+		background-attachment: fixed;
+	}
+	.gmap_canvas {
+		width:450px;
+	}
+
+}
+
+/* ----------- iPad Pro 10.5" ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 834px) 
+  and (max-device-width: 1112px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+  	div.collapse > ul > li:first-child {
+		margin-left:auto;
+		font-size: 160%;
+	}
+	.nav-link {
+		padding: 0px;
+	}
+	.parallax {
+		background-attachment: fixed;
+	}
+	.gmap_canvas {
+		width:450px;
+	}
+
+}
+
+/* ----------- iPad Pro 12.9" ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 1024px) 
+  and (max-device-width: 1366px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+  	div.collapse > ul > li:first-child {
+		margin-left:auto;
+		font-size: 160%;
+	}
+	.nav-link {
+		padding: 0px;
+	}
+	.parallax {
+		background-attachment: fixed;
+	}
+	.gmap_canvas {
+		width:450px;
+	}
+
+}
+
+
 .dropdown-menu.footer.show {
 	padding-left: 20px;
 	padding-right: 20px;
