--- a/Style/style.css
+++ b/Style/style.css
@@ -66,6 +66,7 @@ h1 {
 	background: url("../Media/arrows-blur-buttons-2115257.jpg");
 	background-position: bottom;
 	height: 30%;
+	-webkit-background-size: auto;
 }
 .picture2 {
 	background: url("../Media/artiom-vallat-1524410-unsplash.jpg");
