--- a/Style/style.css
+++ b/Style/style.css
@@ -199,6 +199,18 @@ a.second-link:hover {
 	}
 }
 
+@media (max-width: @iphone-screen) {
+        .parallax {
+		background-attachment: fixed;
+		}
+    }
+
+@media (max-width: @ipad-screen) {
+        .parallax {
+		background-attachment: fixed;
+		}
+    }
+
 .dropdown-menu.footer.show {
 	padding-left: 20px;
 	padding-right: 20px;
