--- a/Style/style.css
+++ b/Style/style.css
@@ -199,6 +199,11 @@ a.second-link:hover {
 	}
 }
 
+/* iPad fix */
+body.mobile .parallax {
+	background-attachment: fixed;
+}
+
 .dropdown-menu.footer.show {
 	padding-left: 20px;
 	padding-right: 20px;
