--- a/Style/style-index.css
+++ b/Style/style-index.css
@@ -8,7 +8,7 @@ body, html {
    -moz-background-size: cover;
    background-size: cover;*/
 }
-/* General navigationbar settings */
+/* asdsda General navigationbar settings */
 .navbar {
 	background-color: #262626;
 	/*height: 5%;*/
