--- a/Style/style-index.css
+++ b/Style/style-index.css
@@ -3,12 +3,12 @@ body, html {
   /*overflow: hidden;*/
   font-family: Tahoma, Geneva, sans-serif;
   width: 100%;
-  /*background-image: url("../Media/motherboard_v1.jpg");
+  background-image: url("../Media/motherboard_v1.jpg");
   -webkit-background-size: cover;
    -moz-background-size: cover;
-   background-size: cover;*/
+   background-size: cover;
 }
-/* asdsda General navigationbar settings */
+/* General navigationbar settings */
 .navbar {
 	background-color: #262626;
 	/*height: 5%;*/
