--- a/Style/style-index.css
+++ b/Style/style-index.css
@@ -3,7 +3,7 @@ body, html {
   /*overflow: hidden;*/
   font-family: Tahoma, Geneva, sans-serif;
   width: 100%;
-  background-image: url("../Media/motherboard_v1.jpgć");
+  background-image: url("../Media/motherboard_v1.jpg");
   -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
