--- a/Style/style.css
+++ b/Style/style.css
@@ -3,6 +3,7 @@ body, html {
   /*overflow: hidden;*/
   font-family: Tahoma, Geneva, sans-serif;
   width: 100%;
+  background-image: url("../Media/motherboard_v1.jpg");
 }
 
 /* General navigationbar settings */
